crates/nash-codegen/src/snapshots/nash_codegen__single_use_tests__branch_barrier.snap
---
source: crates/nash-codegen/src/single_use_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
let x#1 : int = trace "failure" in error in
case@Bool true of
  True -> 42
  False -> x#1
--- core after
let x#1 : int = trace "failure" in error in
case@Bool true of
  True -> 42
  False -> x#1
--- baseline
--- uplc
(program 1.1.0
  [(lam x_1 (case (con bool True) x_1 (con integer 42)))
    (force [[(force (builtin trace)) (con string "failure")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["failure"]
--- candidate
--- uplc
(program 1.1.0
  [(lam x_1 (case (con bool True) x_1 (con integer 42)))
    (force [[(force (builtin trace)) (con string "failure")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["failure"]
