crates/nash-codegen/src/snapshots/nash_codegen__single_use_tests__capture_barrier.snap
---
source: crates/nash-codegen/src/single_use_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
let x#1 : int = trace "capture" in 1 in
let unused#3 : int -> int = \y#2 : int -> x#1 in
42
--- core after
let x#1 : int = trace "capture" in 1 in
let unused#3 : int -> int = \y#2 : int -> x#1 in
42
--- baseline
--- uplc
(program 1.1.0
  [(lam x_1 [(lam unused_3 (con integer 42)) (lam y_2 x_1)])
    (force
      [[(force (builtin trace)) (con string "capture")] (delay (con integer 1))])])
--- result
(con integer 42)
--- logs
["capture"]
--- candidate
--- uplc
(program 1.1.0
  [(lam x_1 [(lam unused_3 (con integer 42)) (lam y_2 x_1)])
    (force
      [[(force (builtin trace)) (con string "capture")] (delay (con integer 1))])])
--- result
(con integer 42)
--- logs
["capture"]
