crates/nash-codegen/src/snapshots/nash_codegen__single_use_tests__computed_function.snap
---
source: crates/nash-codegen/src/single_use_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
let f#2 : int -> int = trace "function" in \x#1 : int -> trace "body" in x#1 in
f#2 42
--- core after
let f#2 : int -> int = trace "function" in \x#1 : int -> trace "body" in x#1 in
f#2 42
--- baseline
--- uplc
(program 1.1.0
  [(lam f_2 [f_2 (con integer 42)])
    (force
      [[(force (builtin trace)) (con string "function")]
        (delay
          (lam x_1 (force [[(force (builtin trace)) (con string "body")] (delay x_1)])))])])
--- result
(con integer 42)
--- logs
["function", "body"]
--- candidate
--- uplc
(program 1.1.0
  [(lam f_2 [f_2 (con integer 42)])
    (force
      [[(force (builtin trace)) (con string "function")]
        (delay
          (lam x_1 (force [[(force (builtin trace)) (con string "body")] (delay x_1)])))])])
--- result
(con integer 42)
--- logs
["function", "body"]
