crates/nash-codegen/src/snapshots/nash_codegen__single_use_tests__computed_tail.snap
---
source: crates/nash-codegen/src/single_use_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
let result#1 : int = addInteger 40 2 in
result#1
--- core after
addInteger 40 2
--- baseline
--- uplc
(program 1.1.0
  [(lam result_1 result_1)
    [[(builtin addInteger) (con integer 40)] (con integer 2)]])
--- result
(con integer 42)
--- logs
[]
--- candidate
--- uplc
(program 1.1.0 [[(builtin addInteger) (con integer 40)] (con integer 2)])
--- result
(con integer 42)
--- logs
[]
