crates/nash-codegen/src/snapshots/nash_codegen__single_use_tests__single_delay.snap
---
source: crates/nash-codegen/src/single_use_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
let d#1 : @delay int = delay (trace "delayed" in 42) in
trace "before force" in force d#1
--- core after
trace "before force" in force (delay (trace "delayed" in 42))
--- baseline
--- uplc
(program 1.1.0
  [(lam d_1
    (force
      [[(force (builtin trace)) (con string "before force")] (delay (force d_1))]))
    (delay
      (force
        [[(force (builtin trace)) (con string "delayed")] (delay (con integer 42))]))])
--- result
(con integer 42)
--- logs
["before force", "delayed"]
--- candidate
--- uplc
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "before force")]
      (delay
        (force
          (delay
            (force
              [[(force (builtin trace)) (con string "delayed")] (delay (con integer 42))]))))]))
--- result
(con integer 42)
--- logs
["before force", "delayed"]
