crates/nash-codegen/src/snapshots/nash_codegen__single_use_tests__trace_barrier.snap
---
source: crates/nash-codegen/src/single_use_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
let x#1 : int = trace "first" in 42 in
trace "second" in x#1
--- core after
let x#1 : int = trace "first" in 42 in
trace "second" in x#1
--- baseline
--- uplc
(program 1.1.0
  [(lam x_1 (force [[(force (builtin trace)) (con string "second")] (delay x_1)]))
    (force
      [[(force (builtin trace)) (con string "first")] (delay (con integer 42))])])
--- result
(con integer 42)
--- logs
["first", "second"]
--- candidate
--- uplc
(program 1.1.0
  [(lam x_1 (force [[(force (builtin trace)) (con string "second")] (delay x_1)]))
    (force
      [[(force (builtin trace)) (con string "first")] (delay (con integer 42))])])
--- result
(con integer 42)
--- logs
["first", "second"]
