crates/nash-codegen/src/snapshots/nash_codegen__single_use_tests__unused_argument_failure.snap
---
source: crates/nash-codegen/src/single_use_tests.rs
assertion_line: 43
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline\\n{}\\n--- candidate\\n{}\",\npretty(before), pretty(after), output(&baseline), output(&candidate))"
---
--- core before
let f#2 : int -> int = \unused#1 : int -> trace "unreachable" in 42 in
let anf#3 : int = trace "failure" in error in
f#2 anf#3
--- core after
let anf#3 : int = trace "failure" in error in
trace "unreachable" in 42
--- baseline
--- uplc
(program 1.1.0
  [(lam f_2
    [(lam anf_3 [f_2 anf_3])
      (force [[(force (builtin trace)) (con string "failure")] (delay (error))])])
    (lam unused_1
      (force
        [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 42))]))])
--- result
error: ExplicitErrorTerm
--- logs
["failure"]
--- candidate
--- uplc
(program 1.1.0
  [(lam anf_3
    (force
      [[(force (builtin trace)) (con string "unreachable")] (delay (con integer 42))]))
    (force [[(force (builtin trace)) (con string "failure")] (delay (error))])])
--- result
error: ExplicitErrorTerm
--- logs
["failure"]
